src/App.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit; 
}

html {
  font-size: 62.5%;
  font-family: 'Lato', sans-serif;
  color: #020202; 
}

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(-10rem);
    -webkit-transform: translateX(-10rem);
    -moz-transform: translateX(-10rem);
    -ms-transform: translateX(-10rem);
    -o-transform: translateX(-10rem); }
  80% {
    transform: translateX(1rem);
    -webkit-transform: translateX(1rem);
    -moz-transform: translateX(1rem);
    -ms-transform: translateX(1rem);
    -o-transform: translateX(1rem); }
  100% {
    opacity: 1;
    transform: translate(0); } 
  }

@keyframes moveInRight {
  0% {
    opacity: 0;
    transform: translateX(10rem);
    -webkit-transform: translateX(10rem);
    -moz-transform: translateX(10rem);
    -ms-transform: translateX(10rem);
    -o-transform: translateX(10rem); }
  80% {
    transform: translateX(-1rem);
    -webkit-transform: translateX(-1rem);
    -moz-transform: translateX(-1rem);
    -ms-transform: translateX(-1rem);
    -o-transform: translateX(-1rem); }
  100% {
    opacity: 1;
    transform: translate(0); } }

@keyframes moveInBottom {
  0% {
    opacity: 0;
    transform: translateY(3rem);
    -webkit-transform: translateY(3rem);
    -moz-transform: translateY(3rem);
    -ms-transform: translateY(3rem);
    -o-transform: translateY(3rem); }
  100% {
    opacity: 1;
    transform: translate(0); } }

@keyframes easeText {
  0% {
    opacity: 0;
    transform: translateY(6rem);
    -webkit-transform: translateY(6rem);
    -moz-transform: translateY(6rem);
    -ms-transform: translateY(6rem);
    -o-transform: translateY(6rem); }
  100% {
    opacity: 1;
    transform: translate(0);
    -webkit-transform: translate(0);
    -moz-transform: translate(0);
    -ms-transform: translate(0);
    -o-transform: translate(0); } }

@keyframes imgAnimation {
  0% {
    transform: scale(1.5);
    -webkit-transform: scale(1.5);
    -moz-transform: scale(1.5);
    -ms-transform: scale(1.5);
    -o-transform: scale(1.5); }
  100% {
    transform: scale(1);
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    -o-transform: scale(1); } }

@keyframes appear {
  0% {
    opacity: 1; }
  20% {
    opacity: 0.7; }
  40% {
    opacity: 0.5; }
  80% {
    opacity: 0.2; }
  90% {
    opacity: 0; }
  100% {
    opacity: 1; } }

.App {
  max-width: 100vw;
  max-height: 100vh;
  overflow: hidden;
}

